fix nav -> more disappears on small screen

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -486,7 +486,7 @@ body p {
 }
 
 .navbar-link {
-  font-size: 24px;
+  font-size: 22px;
   margin-right: 1em;
 }
 
@@ -505,6 +505,11 @@ body p {
 
 #nav-top .item {
   min-height: 4em;
+  padding: .5em;
+}
+
+#nav-top .item:first-child {
+  padding: calc(1em + 2px);
 }
 
 #nav-top img {
