--- a/resources/assets/sass/app/navigation.scss
+++ b/resources/assets/sass/app/navigation.scss
@@ -1,7 +1,7 @@
 // TODO Opmaak -> Border images groter (dikte van footer lijn) + Kleur border (footer lijn)
 // TODO Opmaak -> Logo dikker / Groter
 .navbar-link {
-  font-size: 24px;
+  font-size: 22px;
   margin-right: 1em;
 }
 .navbar-link:last-child {
@@ -16,6 +16,10 @@
 }
 #nav-top .item {
   min-height: 4em;
+  padding: .5em;
+}
+#nav-top .item:first-child {
+  padding: calc(1em + 2px);
 }
 #nav-top img {
   border-radius: 50%;
